# fury

./: .codecov.yml  .codespellrc  .coveragerc  .flake8  .git_archival.txt  .gitignore  .mailmap  .pep8speaks.yml  .pre-commit-config.yaml  .travis.yml  9.1.0  AUTHORS.rst  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  azure-pipelines.yml  constants.py  contributor.md  main.py  my_primitive.py  out.txt  paper.bib  paper.md  pyproject.toml  pytest.ini  pytest_output.txt  requirements-dev.txt  requirements.txt  rhombicuboctahedron.py  ring_slider_demo_v2.py  ruff.toml  setup.cfg  setup.py  star2D.py  star3D.py  test.py  (+14 more)
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: generic-issue-template.md  gsoc-request.md
.github/workflows/: build_docs.yml  check_format.yml  codespell.yml  debug.yml  doc.yml  inspect.yml  precommit_update.yml  test.yml
ci/: azure-pipelines.yml.old  install.sh  install_dependencies.sh  run_tests.sh  setup_headless.sh
ci/appveyor/: install.ps1  script.ps1
ci/travis/: deploy_docs.sh  install.sh  script.sh
ci/windows/: appveyor.yml  install.ps1  install_opengl.ps1  script.ps1
docs/: Makefile  README.md  README.txt  make.bat  upload_to_gh-pages.py
docs/examples/: 2Dwavefunc_animated.py  README.rst  _animation.rst  _demos.rst  _introductory.rst  _shaders.rst  _ui.rst  _valid_examples.toml  boids.py  collision-particles.py  demo_molecular.py  example.ipynb  example.py  example_offscreen.py  example_streamlines.py  example_ui.py  trees_example.py  ui_tabs_v2.py  viz_advanced.py  viz_animated_surfaces.py  viz_aniso_hair_sl_bundle.py  viz_aniso_hair_st_bundle.py  viz_anisotropic_hair_bundle.py  viz_arrow.py  viz_ball_collide.py  viz_basic_qt.py  viz_bezier_interpolator.py  viz_billboard_geometry_shader.py  viz_billboard_labels.py  viz_billboard_labels_new_font.py  viz_billboard_sdf_spheres.py  viz_billboard_spheres.py  viz_brick_wall.py  viz_brownian_motion.py  viz_bundle_gallery2.py  viz_bundles.py  viz_bundles_gallery.py  viz_bundles_gallery2.py  viz_button.py  viz_buttons.py  (+134 more)
docs/experimental/: buffer_compose.py  float_to_rgb.py  framebuffer_example.py  tmp_pcl_fetcher.py  viz_basic_xyz_pcl.py  viz_beads.py  viz_billboards.py  viz_billboards_2.py  viz_brick_wall.py  viz_canvas.py  viz_cloud.py  viz_gooch.py  viz_kde_2d.py  viz_kde_3d_att.py  viz_kde_class.py  viz_laplacian.py  viz_molecular_demo.py  viz_molecular_surfaces.py  viz_multisdf.py  viz_pcl_basic_xyz.py  viz_pcl_kitchen_segmentation.py  viz_points_kde.py  viz_reflect.py  viz_rope.py  viz_sdf.py  viz_sh_odf.py  viz_shader_canvas.py  viz_shader_canvas_sk.py  viz_shader_faces.py  viz_shader_frag_fract.py  viz_shader_parallax.py  viz_shader_parallax_truchet.py  viz_shader_perlin_noise.py  viz_shader_perlin_noise_1.py  viz_shader_perlin_noise_2.py  viz_shader_sines_1.py  viz_shader_square.py  viz_shader_texture.py  viz_shader_wave.py  viz_toon.py  (+2 more)
docs/source/: authors_link.rst  blog.rst  community.rst  conf.py  contributors.json  fury-pybullet.rst  getting_started.rst  index.rst  installation.rst  introduction.rst  migration_guide_v2.0.rst  release-history.rst  usage.rst
docs/tutorials/: README.txt  viz_buttons.py  viz_cube.py  viz_listBox.py  viz_shader.py  viz_shapes.py  viz_slice.py  viz_spiky.py  viz_timers.py  viz_ui.py  viz_ui_listbox.py  viz_ui_slider.py
examples/: eg1.py  textWrapperTest.py  ui.py  viz_slice.py  viz_ui.py  vtk_server.py  vtkeg.py
examples/TextWrapper/: test.py
examples/ui/: range_slider_demo.py
fury/: .flake8  .gitattributes  CONTRIBUTING.rst  __init__.py  __init__.pyi  _version.py  actor.py  actor_text.py  animation.py  bid.bat  bio.py  colormap.py  convert.py  decorators.py  deprecator.py  fvtk.py  geometry.py  gltf.py  interactor.py  io.py  layout.py  lib.py  material.py  molecular.py  optpkg.py  pick.py  pkg_info.py  postprocessing.py  primitive.py  setup.cfg  shader.py  swarm.py  testing.py  text_tools.py  texture_font.py  tmpdirs.py  transform.py  trees.py  ui.py  utils.py  (+3 more)
fury/actor/: __init__.py  __init__.pyi  _billboard.py  actor.py  billboard.py  bio.py  core.py  curved.py  geometry.py  materials.py  planar.py  polyhedron.py  slicer.py  surface.py  topology.py  utils.py
fury/actors/: __init__.py  __init__.pyi  effect_manager.py  effect_manager_alt.py  effect_manager_alt_2.py  ellipsoid.py  odf.py  odf_slicer.py  peak.py  tensor.py
fury/animation/: __init__.py  __init__.pyi  animation.py  helpers.py  interpolator.py  timeline.py
fury/data/: __init__.py  __init__.pyi  fetcher.py
fury/docs/: upload_to_gh-pages.py
fury/effects/: __init__.py  effect_manager.py  effects.py
fury/examples/: move_cord.py  nativeFileDialog.py  vtk_server.py  wall_demo.py
fury/fury/: actor.py  interactor.py  ui.py  window.py
fury/io/: __init__.py  __init__.pyi  _texture.py
fury/medical/: peaks.py
fury/motion/: __init__.py  __init__.pyi  core.py  helpers.py  interpolator.py  timeline.py
fury/network/: __init__.py  __init__.pyi  core.py  parser.py
fury/requirements/: docs.txt
fury/shaders/: __init__.py  __init__.pyi  animation_dec.vert  animation_impl.vert  base.py  billboard.geom  billboard_dec.frag  billboard_dec.vert  billboard_impl.frag  billboard_impl.vert  billboard_spheres_dec.frag  billboard_spheres_impl.frag  boids_dec.vert  boids_impl.vert  bxdf_dec.frag  bxdf_impl.frag  gs_billboard.frag  gs_billboard.geom  gs_billboard_dec.frag  gs_billboard_dec.vert  gs_billboard_impl.vert  gs_billboard_sphere_impl.frag  line.geom  marker_billboard_dec.frag  marker_billboard_dec.vert  marker_billboard_impl.frag  marker_billboard_impl.vert  peak_dec.frag  peak_dec.vert  peak_impl.frag  peak_impl.vert  sdf_dec.frag  sdf_dec.vert  sdf_impl.frag  sdf_impl.vert  sdfmulti_dec.frag  sdfmulti_impl.frag  sdfsh_dec.frag  (+8 more)
requirements/: README.md  all.txt  default.txt  dev.txt  doc.txt  docs.txt  optional.txt  test.txt
simple-Flocking-simulation-/: boid.py  constants.py  main.py  matrix.py  tools.py  ui.py  uiParameters.py
tests/: test_io_vtr.py
tools/: generate_requirements.py  prepare_release.py
(+864 files in other folders)
