[metadata]
name = fury
url = https://fury.gl
download_url = https://github.com/fury-gl/fury
author = Eleftherios Garyfallidis
author_email = fury@python.org
maintainer = Serge Koudoro
maintainer_email = fury@python.org
classifiers =
	Natural Language :: English
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
license = BSD (3-clause)
description = Free Unified Rendering in Python
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    fury

[options]
python_requires = >=3.7
install_requires =
    numpy >=1.15
	scipy>=1.0
    vtk>=9.1.0
    pillow>=5.4.1
    packaging >=17.0
    setuptools

zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    docs
    tests

[options.package_data]
# When adding files here, remember to update MANIFEST.in as well,
# or else they will not be included in the distribution on PyPI!
# 'path/to/data_file',
fury =
	fury/data/files/*
    fury/shaders/*

[options.extras_require]
plot =
    matplotlib >=0.9.9
medical =
    dipy
dev =
    gitpython
    twine
doc =
    matplotlib >= 1.5.3
    numpydoc
    sphinx >=0.3,<3
    texext
style =
    flake8
test =
    coverage
    pytest !=5.3.4
    pytest-cov
    pytest-doctestplus
all =
    %(plot)s
    %(dev)s
    %(doc)s
    %(medical)s
    %(style)s
    %(test)s

[flake8]
max-line-length = 100
ignore = D100,D101,D102,D103,D104,D105,D200,D201,D202,D204,D205,D208,D209,D210,D300,D301,D400,D401,D403,E24,E121,E123,E126,E226,E266,E402,E704,E731,F821,I100,I101,I201,N802,N803,N804,N806,W503,W504,W605
exclude =
    *test*
    *sphinx*
    nibabel/externals/*
    */__init__.py

[versioneer]
VCS = git
style = pep440-post
versionfile_source = fury/_version.py
versionfile_build = fury/_version.py
tag_prefix = v
